[FIX] web: M3: Label appears above input borders
This commit adjusts the label background to ensure the input border
is always hidden behind the label.

--- a/addons/web/static/src/views/form/form_controller_m3.scss
+++ b/addons/web/static/src/views/form/form_controller_m3.scss
@@ -49,11 +49,7 @@
             margin-bottom: 0 !important;
 
             // Hide the border of the adjacent sibling box that is under the label
-            background-image: linear-gradient($o-view-background-color);
-            background-size: 100% var(--o-box-border-size);
-            background-position: center;
-            background-repeat: no-repeat;
-            background-color: transparent;
+            background: linear-gradient(0deg, transparent 0%, $o-view-background-color 45%, $o-view-background-color 55%, transparent 100%);
 
             // Same as ligne +/- 592; TODO merge the rules after maybe
             font-size: $font-size-sm !important;
